# zkVMs-benchmarks

./: .gitignore  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  Vertices-010.in  flake.nix  guest.nix  rust-format-all.nix  update-nix-dependencies.nix  zkvmLib.nix
.agents/tasks/2025/06/: 05-0054-zkvm-support
guests/: README.md
guests/arrays_iter/: .no_zkwasm  Cargo.toml  default.env  default_private_input.toml  default_public_input.toml
guests/arrays_iter/src/: lib.rs
guests/dvt-circuits/: Cargo.toml  default_private_input.toml
guests/dvt-circuits/bls_utils/: Cargo.toml
guests/dvt-circuits/bls_utils/src/: lib.rs
guests/dvt-circuits/dvt_abi/src/: lib.rs
guests/dvt-circuits/src/: lib.rs
guests/eddsa_poseidon/: Cargo.toml  default_private_input.toml  default_public_input.toml
guests/eddsa_poseidon/src/: ec.rs  lib.rs
guests/evaluate_polynomial/: .no_jolt  .no_nexus  .no_zkwasm  Cargo.toml  default_private_input.toml  default_public_input.toml
guests/evaluate_polynomial/src/: lib.rs
guests/fibonacci/: Cargo.toml  default.env  default_private_input.toml  default_public_input.toml
guests/fibonacci/src/: lib.rs
guests/fibonacci_matrix/: Cargo.toml  default.env  default_private_input.toml  default_public_input.toml
guests/fibonacci_matrix/src/: lib.rs
guests/graph_coloring/: Cargo.toml  default.env  default_private_input.toml  default_public_input.toml
guests/graph_coloring/src/: lib.rs
guests/keccak/: Cargo.toml  default.env  default_public_input.toml
guests/keccak/src/: lib.rs
guests/rsa/: .no_jolt  .no_nexus  .no_zkwasm  Cargo.toml  default.env  default_public_input.toml
guests/rsa/src/: lib.rs
guests/sha2/: Cargo.toml
guests/sha2/src/: lib.rs
guests/sha256/: Cargo.toml  default.env  default_private_input.toml  default_public_input.toml
guests/sha256/src/: lib.rs
guests/sha3/: Cargo.toml
guests/sha3/src/: lib.rs
guests/zk_dungeon/: .no_zkwasm  Cargo.toml  default.env  default_private_input.toml  default_public_input.toml
guests/zk_dungeon/src/: dungeon.rs  lib.rs
guests_macro/: Cargo.toml
guests_macro/src/: lib.rs  parse_fn.rs
web-site/docs/: SPEC.md
zkvms/: README.md
zkvms/jolt/: Cargo.toml  default.nix
zkvms/jolt/guest/: Cargo.toml  guest.ld
zkvms/jolt/guest/src/: lib.rs
zkvms/jolt/host/: Cargo.toml
zkvms/jolt/host/src/: main.rs
zkvms/jolt/wrapper_macro/: Cargo.toml
zkvms/jolt/wrapper_macro/src/: lib.rs
zkvms/nexus/: Cargo.toml  default.nix
zkvms/nexus/guest/: Cargo.toml  guest.ld
zkvms/nexus/guest/src/: main.rs
zkvms/nexus/host/: Cargo.toml
zkvms/nexus/host/src/: main.rs
zkvms/nexus/wrapper_macro/src/: lib.rs
zkvms/risc0/: Cargo.toml  Justfile  default.nix
zkvms/risc0/guest/: Cargo.toml  guests_macro
zkvms/risc0/guest/src/: main.rs
zkvms/risc0/guest_elf_patch/: Cargo.toml
zkvms/risc0/guest_elf_patch/src/: main.rs
zkvms/risc0/host/: Cargo.toml
zkvms/risc0/host/src/: main.rs
zkvms/risc0/wrapper_macro/src/: lib.rs
zkvms/sp1/: Cargo.toml  default.nix
zkvms/sp1/guest/: Cargo.toml  guests
zkvms/sp1/guest/src/: main.rs
zkvms/sp1/host/: Cargo.toml
zkvms/sp1/host/src/: main.rs
zkvms/sp1/wrapper_macro/: Cargo.toml
zkvms/sp1/wrapper_macro/src/: lib.rs
zkvms/zkm/: 0001-chore-Increase-DEGREE_BITS_RANGE.patch  Cargo.toml  default.nix
zkvms/zkm/guest/: Cargo.toml  guests_macro
zkvms/zkm/guest/src/: main.rs
zkvms/zkm/host/: Cargo.toml
zkvms/zkm/host/src/: main.rs
zkvms/zkm/sdk/: Cargo.toml  README.md
zkvms/zkm/sdk/src/local/: util.rs
zkvms/zkm/wrapper_macro/src/: lib.rs
zkvms/zkwasm/: default.nix
zkvms/zkwasm/guest/: Cargo.toml
zkvms/zkwasm/guest/src/: lib.rs
zkvms/zkwasm/host/: Cargo.toml
zkvms/zkwasm/host/src/: main.rs
zkvms/zkwasm/host/tobytes/: Cargo.toml
zkvms/zkwasm/host/tobytes/src/: lib.rs
zkvms/zkwasm/wrapper_macro/src/: lib.rs
zkvms_guest_io/: Cargo.toml  default.nix
zkvms_guest_io/src/: main.rs
zkvms_host_io/: Cargo.toml
zkvms_host_io/input_macros/: Cargo.toml
zkvms_host_io/input_macros/src/: lib.rs
zkvms_host_io/src/: lib.rs
