[package]
name = "zkvms_host_io"
version = "0.1.0"
edition = "2021"

[dependencies]
input_macros = { path = "./input_macros" }
clap = { version = "4.5", features = ["derive"] }
num-traits = "0.2.19"
serde = { version = "1.0.217", features = ["derive"] }
toml = "0.8.19"
json = "0.12.4"
env-file-reader = "0.3.0"
