[package]
name = "evaluate_polynomial"
version = "0.1.0"
edition = "2021"

[dependencies]
bls12_381 = { git = "https://github.com/sp1-patches/bls12_381", features = ["experimental"]  }
guests_macro = { version = "0.1.0", path = "../../guests_macro" }
hex = "0.4"

[features]
no_std = []
jolt = []
nexus = []
risc0 = []
sp1 = []
zkm = []
zkwasm = []
