[package]
name = "keccak"
version = "0.1.0"
edition = "2021"

[dependencies]
guests_macro = { version = "0.1.0", path = "../../guests_macro" }
sha3 = { version = "0.10.8", default-features = false }

zkm-runtime = { git = "https://github.com/zkMIPS/zkm.git", optional = true } # patched by the guest wrapper
[features]
no_std = []
jolt = []
nexus = []
risc0 = []
sp1 = []
zkm = ["zkm-runtime"]
zkwasm = []
