[package]
name = "sha256"
version = "0.1.0"
edition = "2021"

[dependencies]
sha2 = { version = "0.10.8", default-features = false }
guests_macro = { version = "0.1.0", path = "../../guests_macro" }
hex-literal = "0.4.1"

[features]
no_std = []
jolt = []
nexus = []
risc0 = []
sp1 = []
zkm = []
zkwasm = []
