[package]
name = "sha256"
version = "0.1.0"
edition = "2021"

[dependencies]
guests_macro = { version = "0.1.0", path = "../../guests_macro" }
sha2 = { version = "0.10.8", default-features = false }

sha2-sp1 = { git = "https://github.com/sp1-patches/RustCrypto-hashes", package = "sha2", tag = "patch-sha2-0.10.8-sp1-4.0.0", optional = true }
sha2-risc0 = { git = "https://github.com/risc0/RustCrypto-hashes", package = "sha2", tag = "sha2-v0.10.8-risczero.0", optional = true }

[features]
no_std = []
jolt = []
nexus = []
risc0 = ["sha2-risc0"]
sp1 = ["sha2-sp1"]
zkm = []
zkwasm = []
