[workspace]
resolver = "2"
members = [
  "host",
  "guest",
  "guest/guests/*",
]

[profile.release]
debug = 1
codegen-units = 1
lto = "fat"

[patch.crates-io]
ark-ff = { git = "https://github.com/a16z/arkworks-algebra", branch = "optimize/field-from-u64" }
ark-ec = { git = "https://github.com/a16z/arkworks-algebra", branch = "optimize/field-from-u64" }
ark-serialize = { git = "https://github.com/a16z/arkworks-algebra", branch = "optimize/field-from-u64" }
