[package]
name = "guest"
description = "Jolt's specific guest crate, which includes the chosen guest in guests"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "guest"
path = "./src/lib.rs"

[dependencies]
jolt = { package = "jolt-sdk", path = "/nix/store/p3h58kfgv7c7c5gl9m9hzahzn7dn7xja-jolt-unstable-2025-02-12/jolt-sdk", features = ["guest-std"] }

wrapper_macro = { version = "0.1.0", path = "../wrapper_macro" }

# The zkp dependency references a chosen guest in guests. It is included
# (inserted here) by Nix. See zkvmLib.nix
