[package]
name = "guest"
description = "Jolt's specific guest crate, which includes the chosen guest in guests"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "guest"
path = "./src/lib.rs"

[dependencies]
jolt = { package = "jolt-sdk", path = "/nix/store/4wb0sl6p9b9f98y218aj79dhmxhwlkcd-jolt-unstable-2025-03-05/jolt-sdk", features = ["guest-std"] }

wrapper_macro = { version = "0.1.0", path = "../wrapper_macro" }

# The zkp dependency references a chosen guest in guests. It is included
# (inserted here) by Nix. See zkvmLib.nix
