[package]
name = "host-jolt"
version = "0.1.0"
edition = "2021"

[lib]
path = "/nix/store/p3h58kfgv7c7c5gl9m9hzahzn7dn7xja-jolt-unstable-2025-02-12/src/lib.rs"

[profile.release]
debug = 1
codegen-units = 1
lto = "fat"

[workspace]

[patch.crates-io]
ark-ff = { git = "https://github.com/a16z/arkworks-algebra", branch = "optimize/field-from-u64" }
ark-ec = { git = "https://github.com/a16z/arkworks-algebra", branch = "optimize/field-from-u64" }
ark-serialize = { git = "https://github.com/a16z/arkworks-algebra", branch = "optimize/field-from-u64" }

[dependencies]
jolt-sdk = { path = "/nix/store/p3h58kfgv7c7c5gl9m9hzahzn7dn7xja-jolt-unstable-2025-02-12/jolt-sdk", features = ["host"] }
jolt-core = { path = "/nix/store/p3h58kfgv7c7c5gl9m9hzahzn7dn7xja-jolt-unstable-2025-02-12/jolt-core" }

guest = { path = "../guest" }
zkvms_host_io = { path = "../../../zkvms_host_io" }
