[package]
name = "guest"
version = "0.1.0"
edition = "2021"

[dependencies]
nexus-rt = { path = "/nix/store/5cgkj88k6k40gzsa6jwgfcqpkg04awr7-Nexus-zkVM-unstable-2024-12-18/runtime" }
postcard = { version = "1.0.10", default-features = false, features = ["alloc"] }

wrapper_macro = { version = "0.1.0", path = "../wrapper_macro" }
