[package]
name = "guest"
description = "Nexus' specific guest crate, which includes the chosen guest in guests"
version = "0.1.0"
edition = "2021"

[dependencies]
nexus-rt = { path = "/nix/store/ffvl7habndda5p3jvd8xg4r4caa67kl2-Nexus-zkVM-unstable-2025-01-08/runtime" }
postcard = { version = "1.0.10", default-features = false, features = ["alloc"] }

wrapper_macro = { version = "0.1.0", path = "../wrapper_macro" }

# The zkp dependency references a chosen guest in guests. It is included
# (inserted here) by Nix. See zkvmLib.nix
