[package]
name = "guest"
description = "RISC0's specific guest crate, which includes the chosen guest in guests"
version = "0.1.0"
edition = "2021"

[workspace]

[dependencies]
risc0-zkvm = { path = "/nix/store/5d1k44n17gi46mdq04pcb7h1k2c28gb5-risc0-unstable-2025-03-12/risc0/zkvm", default-features = false, features = ['std'] }

wrapper_macro = { version = "0.1.0", path = "../wrapper_macro" }

# The zkp dependency references a chosen guest in guests. It is included
# (inserted here) by Nix. See zkvmLib.nix
