[package]
name = "guest"
description = "RISC0's specific guest crate, which includes the chosen guest in guests"
version = "0.1.0"
edition = "2021"

[workspace]

[dependencies]
risc0-zkvm = { path = "/nix/store/6992z4qxba51p1m9vjbjvcwh16gvdp56-risc0-unstable-2025-03-12/risc0/zkvm", default-features = false, features = ['std'] }

wrapper_macro = { version = "0.1.0", path = "../wrapper_macro" }

# Not used, but needed for Nix to handle dependencies
guest-elf-patch-risc0 = { path = "../guest_elf_patch" }

# The zkp dependency references a chosen guest in guests. It is included
# (inserted here) by Nix. See zkvmLib.nix
