[package]
name = "guest-elf-patch-risc0"
version = "0.1.0"
edition = "2021"

[dependencies]
risc0-binfmt = { path = "/nix/store/jvl62igv3z8yvayhk1c02hw51adjc0d0-risc0-unstable-2025-03-12/risc0/binfmt" }
risc0-zkos-v1compat = { path = "/nix/store/jvl62igv3z8yvayhk1c02hw51adjc0d0-risc0-unstable-2025-03-12/risc0/zkos/v1compat" }
bytemuck_derive = "<1.9.0"
