[package]
name = "host-risc0"
version = "0.1.0"
edition = "2021"

[dependencies]
risc0-zkvm = { path = "/nix/store/jvl62igv3z8yvayhk1c02hw51adjc0d0-risc0-unstable-2025-03-12/risc0/zkvm", features = ['unstable'] }
risc0-zkp = { path = "/nix/store/jvl62igv3z8yvayhk1c02hw51adjc0d0-risc0-unstable-2025-03-12/risc0/zkp", features = ['unstable'] }
# https://github.com/risc0/risc0/blob/881e512732eca72849b2d0e263a1242aba3158af/risc0/zkp/Cargo.toml#L23
hex = { version = "0.4.3", default-features = false, features = ["alloc"] }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
serde = "1.0"
bytemuck_derive = "<1.9.0"

zkvms_host_io = { path = "../../../zkvms_host_io" }
