[package]
name = "guest"
description = "SP1's specific guest crate, which includes the chosen guest in guests"
version = "0.1.0"
edition = "2021"

[workspace]

[dependencies]
sp1-zkvm = { path = "/nix/store/viprfh4bxhjhz6im9r6a31s0ms6z6sjs-sp1-unstable-2025-03-10/crates/zkvm/entrypoint" }

wrapper_macro = { version = "0.1.0", path = "../wrapper_macro" }

# The zkp dependency references a chosen guest in guests. It is included
# (inserted here) by Nix. See zkvmLib.nix
