[package]
name = "guest"
description = "ZKM's specific guest crate, which includes the chosen guest in guests"
version = "0.1.0"
edition = "2021"

[workspace]

[dependencies]
zkm-runtime = { path = "/nix/store/xv19lsmz5ards9q6nnyzspcdjlz6law5-zkm-unstable-2025-02-11/runtime/entrypoint" }

wrapper_macro = { version = "0.1.0", path = "../wrapper_macro" }

# The zkp dependency references a chosen guest in guests. It is included
# (inserted here) by Nix. See zkvmLib.nix
