[package]
name = "guest"
description = "ZKM's specific guest crate, which includes the chosen guest in guests"
version = "0.1.0"
edition = "2021"

[workspace]

[patch."https://github.com/zkMIPS/zkm.git"]
zkm-runtime = { path = "/nix/store/71c0b7qyjy9zbaa5gkz5qcxpz46i0h0r-zkm-unstable-2025-03-11/runtime/entrypoint" }

[dependencies]
zkm-runtime = { path = "/nix/store/71c0b7qyjy9zbaa5gkz5qcxpz46i0h0r-zkm-unstable-2025-03-11/runtime/entrypoint" }

wrapper_macro = { version = "0.1.0", path = "../wrapper_macro" }

# The zkp dependency references a chosen guest in guests. It is included
# (inserted here) by Nix. See zkvmLib.nix
