[package]
name = "host-zkm"
version = "0.1.0"
edition = "2021"

[dependencies]
zkm-sdk = { git = "https://github.com/zkMIPS/zkm-project-template", features = ["snark"] }
bincode = "1.3.3"
tokio = { version = "1.21.0", features = ["macros", "rt-multi-thread", "signal"] }
anyhow = "1.0.75"

zkvms_host_io = { path = "../../../zkvms_host_io" }

[patch."https://github.com/zkMIPS/zkm"]
zkm-emulator = { path = "/nix/store/xv19lsmz5ards9q6nnyzspcdjlz6law5-zkm-unstable-2025-02-11/emulator" }
zkm-prover = { path = "/nix/store/xv19lsmz5ards9q6nnyzspcdjlz6law5-zkm-unstable-2025-02-11/prover" }
