[package]
name = "host-zkm"
version = "0.1.0"
edition = "2021"

[dependencies]
zkm-sdk = { git = "https://github.com/zkMIPS/zkm-project-template", features = ["snark"] }
zkm-recursion = { git = "https://github.com/zkMIPS/zkm", branch = "main", default-features = false }
bincode = "1.3.3"
tokio = { version = "1.21.0", features = ["macros", "rt-multi-thread", "signal"] }
anyhow = "1.0.75"

zkvms_host_io = { path = "../../../zkvms_host_io" }

[patch."https://github.com/zkMIPS/zkm"]
zkm-emulator = { path = "/nix/store/hwdlhm6yd4wlrmklcsiv9zmm2ip0d3cq-zkm-unstable-2025-03-11/emulator" }
zkm-prover = { path = "/nix/store/hwdlhm6yd4wlrmklcsiv9zmm2ip0d3cq-zkm-unstable-2025-03-11/prover" }
zkm-recursion = { path = "/nix/store/hwdlhm6yd4wlrmklcsiv9zmm2ip0d3cq-zkm-unstable-2025-03-11/recursion" }
