[package]
name = "guest"
description = "Jolt's specific guest crate, which includes the chosen guest in guests"
version = "0.1.0"
edition = "2021"

[workspace]

[lib]
crate-type = ["cdylib"]

[dependencies]
rlp = { version = "0.5.2", default-features = false }
zkwasm-rust-sdk = { git = "https://github.com/DelphinusLab/zkWasm-rust.git" }
wasm-bindgen = "=0.2.95"

tobytes = { path = "../host/tobytes" }
wrapper_macro = { version = "0.1.0", path = "../wrapper_macro" }

# The zkp dependency references a chosen guest in guests. It is included
# (inserted here) by Nix. See zkvmLib.nix
